Improving the youtube layout

--- a/youtube.html
+++ b/youtube.html
@@ -8,21 +8,37 @@
     <link rel="stylesheet" href="youtube.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="thumbnail">
-        <img class="video-thumbnail" src="./media/thumbnail-1.webp" alt="thumbnail 1">
-    </div>
-    <div class="video-info">
-        <div class="channel-photo">
-            <img src="./media/channelPhoto/channel-1.jpeg" alt="Channel photo">
+    <div class="videoPreview">
+        <div class="thumbnail">
+            <img src="./media/thumbnails/thumbnail-1.webp" alt="thumbnail 1">
         </div>
-        <div class="video-text">
-            <p class="title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-            <p class="author">Marques Brownlee</p>
-            <p class="data">3.4M views &middot; 6 months ago</p>
+        <div class="videoInfo">
+            <div class="channelPhoto">
+                <img src="./media/channelPhoto/channel-1.jpeg" alt="Channel photo">
+            </div>
+            <div class="videoText">
+                <p class="title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                <p class="author">Marques Brownlee</p>
+                <p class="data">3.4M views &middot; 6 months ago</p>
+            </div>
         </div>
     </div>
-</body>
-</html>
+    <div class="videoPreview">
+        <div class="thumbnail">
+            <img src="./media/thumbnails/thumbnail-2.webp" alt="thumbnail 1">
+        </div>
+        <div class="videoInfo">
+            <div class="channelPhoto">
+                <img src="./media/channelPhoto/channel-2.jpeg" alt="Channel photo">
+            </div>
+            <div class="videoText">
+                <p class="title">Try Not To Laugh Challenge #9</p>
+                <p class="author">Markplier</p>
+                <p class="data">19M views &middot; 4 years ago</p>
+            </div>
+        </div>
+    </div>
+    </html>
