--- a/project/youtube.html
+++ b/project/youtube.html
@@ -5,39 +5,147 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
-    <link rel="stylesheet" href="youtube.css">
+    <link rel="stylesheet" href="./styles/videoGrid.css">
+    <link rel="stylesheet" href="./styles/general.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="videoPreview">
-        <div class="thumbnail">
-            <img src="./media/thumbnails/thumbnail-1.webp" alt="thumbnail 1">
-        </div>
-        <div class="videoInfo">
-            <div class="channelPhoto">
-                <img src="./media/channelPhoto/channel-1.jpeg" alt="Channel photo">
+    <div class="videoGrid">
+        <div class="videoPreview">
+            <div class="thumbnail">
+                <img src="./media/thumbnails/thumbnail-1.webp" alt="thumbnail 1">
             </div>
-            <div class="videoText">
-                <p class="title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-                <p class="author">Marques Brownlee</p>
-                <p class="data">3.4M views &middot; 6 months ago</p>
+            <div class="videoInfo">
+                <div class="channelPhoto">
+                    <img src="./media/channelPhoto/channel-1.jpeg" alt="Channel photo">
+                </div>
+                <div class="videoText">
+                    <p class="title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                    <p class="author">Marques Brownlee</p>
+                    <p class="data">3.4M views &middot; 6 months ago</p>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="videoPreview">
-        <div class="thumbnail">
-            <img src="./media/thumbnails/thumbnail-2.webp" alt="thumbnail 1">
-        </div>
-        <div class="videoInfo">
-            <div class="channelPhoto">
-                <img src="./media/channelPhoto/channel-2.jpeg" alt="Channel photo">
+        <div class="videoPreview">
+            <div class="thumbnail">
+                <img src="./media/thumbnails/thumbnail-2.webp" alt="thumbnail 2">
             </div>
-            <div class="videoText">
-                <p class="title">Try Not To Laugh Challenge #9</p>
-                <p class="author">Markplier</p>
-                <p class="data">19M views &middot; 4 years ago</p>
+            <div class="videoInfo">
+                <div class="channelPhoto">
+                    <img src="./media/channelPhoto/channel-2.jpeg" alt="Channel photo">
+                </div>
+                <div class="videoText">
+                    <p class="title">Try Not To Laugh Challenge #9</p>
+                    <p class="author">Markplier</p>
+                    <p class="data">19M views &middot; 4 years ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="videoPreview">
+            <div class="thumbnail">
+                <img src="./media/thumbnails/thumbnail-3.webp" alt="thumbnail 3">
+            </div>
+            <div class="videoInfo">
+                <div class="channelPhoto">
+                    <img src="./media/channelPhoto/channel-3.jpeg" alt="Channel photo">
+                </div>
+                <div class="videoText">
+                    <p class="title">Crazy Tik Toks Taken Moments Before DISASTER</p>
+                    <p class="author">SSSniperWolf</p>
+                    <p class="data">12M views &middot; 1 year ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="videoPreview">
+            <div class="thumbnail">
+                <img src="./media/thumbnails/thumbnail-4.webp" alt="thumbnail 4">
+            </div>
+            <div class="videoInfo">
+                <div class="channelPhoto">
+                    <img src="./media/channelPhoto/channel-4.jpeg" alt="Channel photo">
+                </div>
+                <div class="videoText">
+                    <p class="title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                    <p class="author">Veritasium</p>
+                    <p class="data">18M views &middot; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="videoPreview">
+            <div class="thumbnail">
+                <img src="./media/thumbnails/thumbnail-5.webp" alt="thumbnail 5">
+            </div>
+            <div class="videoInfo">
+                <div class="channelPhoto">
+                    <img src="./media/channelPhoto/channel-5.jpeg" alt="Channel photo">
+                </div>
+                <div class="videoText">
+                    <p class="title">Kadane's Algorithm to Maximum Sum Subarray Problem</p>
+                    <p class="author">CS Dojo</p>
+                    <p class="data">519K views &middot; 5 years ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="videoPreview">
+            <div class="thumbnail">
+                <img src="./media/thumbnails/thumbnail-6.webp" alt="thumbnail 6">
+            </div>
+            <div class="videoInfo">
+                <div class="channelPhoto">
+                    <img src="./media/channelPhoto/channel-6.jpeg" alt="Channel photo">
+                </div>
+                <div class="videoText">
+                    <p class="title">Anything You Can Fit In The Circle I’ll Pay For</p>
+                    <p class="author">MrBeast</p>
+                    <p class="data">141M views &middot; 1 year ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="videoPreview">
+            <div class="thumbnail">
+                <img src="./media/thumbnails/thumbnail-7.webp" alt="thumbnail 7">
+            </div>
+            <div class="videoInfo">
+                <div class="channelPhoto">
+                    <img src="./media/channelPhoto/channel-7.jpeg" alt="Channel photo">
+                </div>
+                <div class="videoText">
+                    <p class="title">Why Planes Don't Fly Over Tibet</p>
+                    <p class="author">RealLifeLore</p>
+                    <p class="data">6.6M views &middot; 1 year ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="videoPreview">
+            <div class="thumbnail">
+                <img src="./media/thumbnails/thumbnail-8.webp" alt="thumbnail 8">
+            </div>
+            <div class="videoInfo">
+                <div class="channelPhoto">
+                    <img src="./media/channelPhoto/channel-8.jpeg" alt="Channel photo">
+                </div>
+                <div class="videoText">
+                    <p class="title">Inside The World's Biggest Passenger Plane</p>
+                    <p class="author">Tech Vison</p>
+                    <p class="data">3.7M views &middot; 10 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="videoPreview">
+            <div class="thumbnail">
+                <img src="./media/thumbnails/thumbnail-9.webp" alt="thumbnail 9">
+            </div>
+            <div class="videoInfo">
+                <div class="channelPhoto">
+                    <img src="./media/channelPhoto/channel-9.jpeg" alt="Channel photo">
+                </div>
+                <div class="videoText">
+                    <p class="title">The SECRET to Super Human STRENGTH</p>
+                    <p class="author">ThenX</p>
+                    <p class="data">20M views &middot; 3 years ago</p>
+                </div>
             </div>
         </div>
     </div>
