--- a/project/youtube.html
+++ b/project/youtube.html
@@ -8,12 +8,34 @@
     <title>Youtube</title>
     <link rel="stylesheet" href="./styles/videoGrid.css">
     <link rel="stylesheet" href="./styles/general.css">
+    <link rel="stylesheet" href="./styles/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <header>
+        <div class="leftSection">
+            <img class="menu" src="./images/icons/hamburger-menu.svg" alt="hamburger-menu">
+            <img class="logo" src="./images/icons/youtube-logo.svg" alt="youtube-logo">
+        </div>
+        <div class="midSection">
+            <input class="searchBar" type="text" placeholder="Search">
+            <button class="searchButton">
+                <img src="./images/icons/search.svg" alt="searchIcon" class="searchIcon">
+            </button>
+            <button class="voiceSearchButton">
+                <img src="./images/icons/voice-search-icon.svg" alt="voiceSearchIcon" class="voiceSearchIcon">
+            </button>
+        </div>
+        <div class="rightSection">
+            <img src="./images/icons/upload.svg" alt="upload">
+            <img src="./images/icons/youtube-apps.svg" alt="youtube-apps">
+            <img src="./images/icons/notifications.svg" alt="notifications">
+            <img id="myChannel" src="./images/channelPhoto/channel-1.jpeg" alt="channelPhoto">
+        </div>
+    </header>
     <div class="videoGrid">
         <div class="videoPreview">
             <div class="thumbnail">
