sidebar and video time

--- a/project/header.html
+++ b/project/header.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header</title>
+    <link rel="stylesheet" href="./styles/general.css">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/sidebar.css">
 </head>
 
 <body>
@@ -31,6 +33,32 @@
             <img id="myChannel" src="./images/channelPhoto/channel-1.jpeg" alt="channelPhoto">
         </div>
     </header>
+    <nav class="sidebar">
+        <div class="sidebarButton">
+            <img src="./images/icons/home.svg" alt="home">
+            Home
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/explore.svg" alt="explore">
+            Explore
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/subscriptions.svg" alt="subscriptions">
+            Subscriptions
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/originals.svg" alt="originals">
+            Originals
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/youtube-music.svg" alt="youtube-music">
+            Youtube Music
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/library.svg" alt="library">
+            Library
+        </div>
+    </nav>
 </body>
 
 </html>
