--- a/project/youtube.html
+++ b/project/youtube.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/videoGrid.css">
     <link rel="stylesheet" href="./styles/general.css">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/sidebar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -36,10 +37,39 @@
             <img id="myChannel" src="./images/channelPhoto/channel-1.jpeg" alt="channelPhoto">
         </div>
     </header>
+    <nav class="sidebar">
+        <div class="sidebarButton">
+            <img src="./images/icons/home.svg" alt="home">
+            Home
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/explore.svg" alt="explore">
+            Explore
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/subscriptions.svg" alt="subscriptions">
+            Subscriptions
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/originals.svg" alt="originals">
+            Originals
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/youtube-music.svg" alt="youtube-music">
+            YouTube Music
+        </div>
+        <div class="sidebarButton">
+            <img src="./images/icons/library.svg" alt="library">
+            Library
+        </div>
+    </nav>
     <div class="videoGrid">
         <div class="videoPreview">
             <div class="thumbnail">
                 <img src="./images/thumbnails/thumbnail-1.webp" alt="thumbnail 1">
+                <div class="videoTime">
+                    14:20
+                </div>
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
@@ -55,6 +85,9 @@
         <div class="videoPreview">
             <div class="thumbnail">
                 <img src="./images/thumbnails/thumbnail-2.webp" alt="thumbnail 2">
+                <div class="videoTime">
+                    8:22
+                </div>
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
@@ -70,6 +103,9 @@
         <div class="videoPreview">
             <div class="thumbnail">
                 <img src="./images/thumbnails/thumbnail-3.webp" alt="thumbnail 3">
+                <div class="videoTime">
+                    9:13
+                </div>
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
@@ -85,6 +121,9 @@
         <div class="videoPreview">
             <div class="thumbnail">
                 <img src="./images/thumbnails/thumbnail-4.webp" alt="thumbnail 4">
+                <div class="videoTime">
+                    22:09
+                </div>
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
@@ -100,6 +139,9 @@
         <div class="videoPreview">
             <div class="thumbnail">
                 <img src="./images/thumbnails/thumbnail-5.webp" alt="thumbnail 5">
+                <div class="videoTime">
+                    11:17
+                </div>
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
@@ -115,6 +157,9 @@
         <div class="videoPreview">
             <div class="thumbnail">
                 <img src="./images/thumbnails/thumbnail-6.webp" alt="thumbnail 6">
+                <div class="videoTime">
+                    19:59
+                </div>
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
@@ -130,6 +175,9 @@
         <div class="videoPreview">
             <div class="thumbnail">
                 <img src="./images/thumbnails/thumbnail-7.webp" alt="thumbnail 7">
+                <div class="videoTime">
+                    10:13
+                </div>
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
@@ -145,6 +193,9 @@
         <div class="videoPreview">
             <div class="thumbnail">
                 <img src="./images/thumbnails/thumbnail-8.webp" alt="thumbnail 8">
+                <div class="videoTime">
+                    7:12
+                </div>
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
@@ -160,6 +211,9 @@
         <div class="videoPreview">
             <div class="thumbnail">
                 <img src="./images/thumbnails/thumbnail-9.webp" alt="thumbnail 9">
+                <div class="videoTime">
+                    13:17
+                </div>
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
