tooltip and sidebar

--- a/project/youtube.html
+++ b/project/youtube.html
@@ -25,19 +25,33 @@
             <input class="searchBar" type="text" placeholder="Search">
             <button class="searchButton">
                 <img src="./images/icons/search.svg" alt="searchIcon" class="searchIcon">
+                <div class="tooltip">Search</div>
             </button>
             <button class="voiceSearchButton">
                 <img src="./images/icons/voice-search-icon.svg" alt="voiceSearchIcon" class="voiceSearchIcon">
+                <div class="tooltip">Voice Search</div>
             </button>
         </div>
         <div class="rightSection">
-            <img src="./images/icons/upload.svg" alt="upload">
-            <img src="./images/icons/youtube-apps.svg" alt="youtube-apps">
-            <img src="./images/icons/notifications.svg" alt="notifications">
-            <img id="myChannel" src="./images/channelPhoto/channel-1.jpeg" alt="channelPhoto">
+            <div class="tooltipContent">
+                <img src="./images/icons/upload.svg" alt="upload">
+                <div class="tooltip">Upload</div>
+            </div>
+            <div class="tooltipContent">
+                <img src="./images/icons/youtube-apps.svg" alt="youtube-apps">
+                <div class="tooltip">Youtube Apps</div>
+            </div>
+            <div class="tooltipContent">
+                <img src="./images/icons/notifications.svg" alt="notifications">
+                <div class="tooltip">Notifications</div>
+            </div>
+            <div class="tooltipContent">
+                <img id="myChannel" src="./images/channelPhoto/channel-1.jpeg" alt="channelPhoto">
+                <div class="tooltip">My Channel</div>
+            </div>
         </div>
     </header>
-    <nav class="sidebar">
+    <nav>
         <div class="sidebarButton">
             <img src="./images/icons/home.svg" alt="home">
             Home
