--- a/project/youtube.html
+++ b/project/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/general.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/sidebar.css">
+    <link rel="stylesheet" href="./styles/tooltip.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -87,7 +88,18 @@
             </div>
             <div class="videoInfo">
                 <div class="channelPhoto">
-                    <img src="./images/channelPhoto/channel-1.jpeg" alt="Channel photo">
+                    <div class="image">
+                        <img src="./images/channelPhoto/channel-1.jpeg" alt="Channel photo">
+                        <div class="tooltip">
+                            <div class="tooltipImage">
+                                <img src="./images/channelPhoto/channel-1.jpeg" alt="">
+                            </div>
+                            <div class="tooltipChannel">
+                                <span>Marques Brownlee</span>
+                                <p>15M subscribers</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="videoText">
                     <p class="title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
