--- a/project/youtube.html
+++ b/project/youtube.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
     <link rel="stylesheet" href="./styles/videoGrid.css">
+    <link rel="stylesheet" href="./styles/video.css">
     <link rel="stylesheet" href="./styles/general.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/sidebar.css">
@@ -78,180 +79,182 @@
             Library
         </div>
     </nav>
-    <div class="videoGrid">
-        <div class="videoPreview">
-            <div class="thumbnail">
-                <img src="./images/thumbnails/thumbnail-1.webp" alt="thumbnail 1">
-                <div class="videoTime">
-                    14:20
+    <main>
+        <section class="videoGrid">
+            <div class="videoPreview">
+                <div class="thumbnail">
+                    <img src="./images/thumbnails/thumbnail-1.webp" alt="thumbnail 1">
+                    <div class="videoTime">
+                        14:20
+                    </div>
                 </div>
-            </div>
-            <div class="videoInfo">
-                <div class="channelPhoto">
-                    <div class="image">
-                        <img src="./images/channelPhoto/channel-1.jpeg" alt="Channel photo">
-                        <div class="tooltip">
-                            <div class="tooltipImage">
-                                <img src="./images/channelPhoto/channel-1.jpeg" alt="">
-                            </div>
-                            <div class="tooltipChannel">
-                                <span>Marques Brownlee</span>
-                                <p>15M subscribers</p>
+                <div class="videoInfo">
+                    <div class="channelPhoto">
+                        <div class="image">
+                            <img src="./images/channelPhoto/channel-1.jpeg" alt="Channel photo">
+                            <div class="tooltip">
+                                <div class="tooltipImage">
+                                    <img src="./images/channelPhoto/channel-1.jpeg" alt="">
+                                </div>
+                                <div class="tooltipChannel">
+                                    <span>Marques Brownlee</span>
+                                    <p>15M subscribers</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="videoText">
-                    <p class="title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-                    <p class="author">Marques Brownlee</p>
-                    <p class="data">3.4M views &middot; 6 months ago</p>
-                </div>
-            </div>
-        </div>
-        <div class="videoPreview">
-            <div class="thumbnail">
-                <img src="./images/thumbnails/thumbnail-2.webp" alt="thumbnail 2">
-                <div class="videoTime">
-                    8:22
+                    <div class="videoText">
+                        <p class="title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                        <p class="author">Marques Brownlee</p>
+                        <p class="data">3.4M views &middot; 6 months ago</p>
+                    </div>
                 </div>
             </div>
-            <div class="videoInfo">
-                <div class="channelPhoto">
-                    <img src="./images/channelPhoto/channel-2.jpeg" alt="Channel photo">
+            <div class="videoPreview">
+                <div class="thumbnail">
+                    <img src="./images/thumbnails/thumbnail-2.webp" alt="thumbnail 2">
+                    <div class="videoTime">
+                        8:22
+                    </div>
                 </div>
-                <div class="videoText">
-                    <p class="title">Try Not To Laugh Challenge #9</p>
-                    <p class="author">Markplier</p>
-                    <p class="data">19M views &middot; 4 years ago</p>
-                </div>
-            </div>
-        </div>
-        <div class="videoPreview">
-            <div class="thumbnail">
-                <img src="./images/thumbnails/thumbnail-3.webp" alt="thumbnail 3">
-                <div class="videoTime">
-                    9:13
-                </div>
-            </div>
-            <div class="videoInfo">
-                <div class="channelPhoto">
-                    <img src="./images/channelPhoto/channel-3.jpeg" alt="Channel photo">
-                </div>
-                <div class="videoText">
-                    <p class="title">Crazy Tik Toks Taken Moments Before DISASTER</p>
-                    <p class="author">SSSniperWolf</p>
-                    <p class="data">12M views &middot; 1 year ago</p>
+                <div class="videoInfo">
+                    <div class="channelPhoto">
+                        <img src="./images/channelPhoto/channel-2.jpeg" alt="Channel photo">
+                    </div>
+                    <div class="videoText">
+                        <p class="title">Try Not To Laugh Challenge #9</p>
+                        <p class="author">Markplier</p>
+                        <p class="data">19M views &middot; 4 years ago</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="videoPreview">
-            <div class="thumbnail">
-                <img src="./images/thumbnails/thumbnail-4.webp" alt="thumbnail 4">
-                <div class="videoTime">
-                    22:09
+            <div class="videoPreview">
+                <div class="thumbnail">
+                    <img src="./images/thumbnails/thumbnail-3.webp" alt="thumbnail 3">
+                    <div class="videoTime">
+                        9:13
+                    </div>
+                </div>
+                <div class="videoInfo">
+                    <div class="channelPhoto">
+                        <img src="./images/channelPhoto/channel-3.jpeg" alt="Channel photo">
+                    </div>
+                    <div class="videoText">
+                        <p class="title">Crazy Tik Toks Taken Moments Before DISASTER</p>
+                        <p class="author">SSSniperWolf</p>
+                        <p class="data">12M views &middot; 1 year ago</p>
+                    </div>
                 </div>
             </div>
-            <div class="videoInfo">
-                <div class="channelPhoto">
-                    <img src="./images/channelPhoto/channel-4.jpeg" alt="Channel photo">
+            <div class="videoPreview">
+                <div class="thumbnail">
+                    <img src="./images/thumbnails/thumbnail-4.webp" alt="thumbnail 4">
+                    <div class="videoTime">
+                        22:09
+                    </div>
                 </div>
-                <div class="videoText">
-                    <p class="title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
-                    <p class="author">Veritasium</p>
-                    <p class="data">18M views &middot; 4 months ago</p>
-                </div>
-            </div>
-        </div>
-        <div class="videoPreview">
-            <div class="thumbnail">
-                <img src="./images/thumbnails/thumbnail-5.webp" alt="thumbnail 5">
-                <div class="videoTime">
-                    11:17
-                </div>
-            </div>
-            <div class="videoInfo">
-                <div class="channelPhoto">
-                    <img src="./images/channelPhoto/channel-5.jpeg" alt="Channel photo">
-                </div>
-                <div class="videoText">
-                    <p class="title">Kadane's Algorithm to Maximum Sum Subarray Problem</p>
-                    <p class="author">CS Dojo</p>
-                    <p class="data">519K views &middot; 5 years ago</p>
+                <div class="videoInfo">
+                    <div class="channelPhoto">
+                        <img src="./images/channelPhoto/channel-4.jpeg" alt="Channel photo">
+                    </div>
+                    <div class="videoText">
+                        <p class="title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                        <p class="author">Veritasium</p>
+                        <p class="data">18M views &middot; 4 months ago</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="videoPreview">
-            <div class="thumbnail">
-                <img src="./images/thumbnails/thumbnail-6.webp" alt="thumbnail 6">
-                <div class="videoTime">
-                    19:59
+            <div class="videoPreview">
+                <div class="thumbnail">
+                    <img src="./images/thumbnails/thumbnail-5.webp" alt="thumbnail 5">
+                    <div class="videoTime">
+                        11:17
+                    </div>
+                </div>
+                <div class="videoInfo">
+                    <div class="channelPhoto">
+                        <img src="./images/channelPhoto/channel-5.jpeg" alt="Channel photo">
+                    </div>
+                    <div class="videoText">
+                        <p class="title">Kadane's Algorithm to Maximum Sum Subarray Problem</p>
+                        <p class="author">CS Dojo</p>
+                        <p class="data">519K views &middot; 5 years ago</p>
+                    </div>
                 </div>
             </div>
-            <div class="videoInfo">
-                <div class="channelPhoto">
-                    <img src="./images/channelPhoto/channel-6.jpeg" alt="Channel photo">
+            <div class="videoPreview">
+                <div class="thumbnail">
+                    <img src="./images/thumbnails/thumbnail-6.webp" alt="thumbnail 6">
+                    <div class="videoTime">
+                        19:59
+                    </div>
                 </div>
-                <div class="videoText">
-                    <p class="title">Anything You Can Fit In The Circle I’ll Pay For</p>
-                    <p class="author">MrBeast</p>
-                    <p class="data">141M views &middot; 1 year ago</p>
-                </div>
-            </div>
-        </div>
-        <div class="videoPreview">
-            <div class="thumbnail">
-                <img src="./images/thumbnails/thumbnail-7.webp" alt="thumbnail 7">
-                <div class="videoTime">
-                    10:13
-                </div>
-            </div>
-            <div class="videoInfo">
-                <div class="channelPhoto">
-                    <img src="./images/channelPhoto/channel-7.jpeg" alt="Channel photo">
-                </div>
-                <div class="videoText">
-                    <p class="title">Why Planes Don't Fly Over Tibet</p>
-                    <p class="author">RealLifeLore</p>
-                    <p class="data">6.6M views &middot; 1 year ago</p>
+                <div class="videoInfo">
+                    <div class="channelPhoto">
+                        <img src="./images/channelPhoto/channel-6.jpeg" alt="Channel photo">
+                    </div>
+                    <div class="videoText">
+                        <p class="title">Anything You Can Fit In The Circle I’ll Pay For</p>
+                        <p class="author">MrBeast</p>
+                        <p class="data">141M views &middot; 1 year ago</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="videoPreview">
-            <div class="thumbnail">
-                <img src="./images/thumbnails/thumbnail-8.webp" alt="thumbnail 8">
-                <div class="videoTime">
-                    7:12
+            <div class="videoPreview">
+                <div class="thumbnail">
+                    <img src="./images/thumbnails/thumbnail-7.webp" alt="thumbnail 7">
+                    <div class="videoTime">
+                        10:13
+                    </div>
+                </div>
+                <div class="videoInfo">
+                    <div class="channelPhoto">
+                        <img src="./images/channelPhoto/channel-7.jpeg" alt="Channel photo">
+                    </div>
+                    <div class="videoText">
+                        <p class="title">Why Planes Don't Fly Over Tibet</p>
+                        <p class="author">RealLifeLore</p>
+                        <p class="data">6.6M views &middot; 1 year ago</p>
+                    </div>
                 </div>
             </div>
-            <div class="videoInfo">
-                <div class="channelPhoto">
-                    <img src="./images/channelPhoto/channel-8.jpeg" alt="Channel photo">
+            <div class="videoPreview">
+                <div class="thumbnail">
+                    <img src="./images/thumbnails/thumbnail-8.webp" alt="thumbnail 8">
+                    <div class="videoTime">
+                        7:12
+                    </div>
                 </div>
-                <div class="videoText">
-                    <p class="title">Inside The World's Biggest Passenger Plane</p>
-                    <p class="author">Tech Vison</p>
-                    <p class="data">3.7M views &middot; 10 months ago</p>
-                </div>
-            </div>
-        </div>
-        <div class="videoPreview">
-            <div class="thumbnail">
-                <img src="./images/thumbnails/thumbnail-9.webp" alt="thumbnail 9">
-                <div class="videoTime">
-                    13:17
-                </div>
-            </div>
-            <div class="videoInfo">
-                <div class="channelPhoto">
-                    <img src="./images/channelPhoto/channel-9.jpeg" alt="Channel photo">
-                </div>
-                <div class="videoText">
-                    <p class="title">The SECRET to Super Human STRENGTH</p>
-                    <p class="author">ThenX</p>
-                    <p class="data">20M views &middot; 3 years ago</p>
+                <div class="videoInfo">
+                    <div class="channelPhoto">
+                        <img src="./images/channelPhoto/channel-8.jpeg" alt="Channel photo">
+                    </div>
+                    <div class="videoText">
+                        <p class="title">Inside The World's Biggest Passenger Plane</p>
+                        <p class="author">Tech Vison</p>
+                        <p class="data">3.7M views &middot; 10 months ago</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
+            <div class="videoPreview">
+                <div class="thumbnail">
+                    <img src="./images/thumbnails/thumbnail-9.webp" alt="thumbnail 9">
+                    <div class="videoTime">
+                        13:17
+                    </div>
+                </div>
+                <div class="videoInfo">
+                    <div class="channelPhoto">
+                        <img src="./images/channelPhoto/channel-9.jpeg" alt="Channel photo">
+                    </div>
+                    <div class="videoText">
+                        <p class="title">The SECRET to Super Human STRENGTH</p>
+                        <p class="author">ThenX</p>
+                        <p class="data">20M views &middot; 3 years ago</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </html>
